--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -10,13 +10,13 @@
 {% block dashboard_section %}
 <!-- Dashboard Form -->
 <form id="dashboardForm" action="{{ url_for('admin_manageDepartment') }}" method="POST">
-    <div id="dashboardSection" style="width: 90%; margin:auto;">
+    <div id="dashboardSection" style="width: 90%; margin: auto;">
         <input type="hidden" name="form_type" value="dashboard">
         <div class="form-left" style="width: 100%">
 
             <!-- Overview -->
             <div class="dashboard-row">
-                <div class="dashboard-frame pie">
+                <div class="dashboard-frame pie" style="margin: auto;">
                     <h3>Total Departments</h3>
                     <p class="dashboard-text">{{ total_department }}</p>
                 </div>
