--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -59,32 +59,12 @@
         <div class="profile-frame">
             <div class="form-left">
                 <label>Department Code</label>
-                <input type="text" name="departmentCode" value="{{ departmentCode_text }}" required><br>
-                
-                <label>Department Name</label>
-                <input type="text" name="departmentName" value="{{ departmentName_text }}" required>
+                <input type="text" name="departmentCode" value="{{ departmentCode_text }}" required>
             </div>
 
             <div class="form-right">
-                <label>Dean Name</label>
-                <select id="deanName" name="deanName" required>
-                    <option value="" disabled selected>Select a Dean</option>
-                    {% for dean in deans %}
-                        <option value="{{ dean.userId }}">
-                            [{{ dean.userDepartment }}] {{ dean.userName }}
-                        </option>
-                    {% endfor %}
-                </select><br>
-
-                <label>Hop Name</label>
-                <select id="hopName" name="hopName" required>
-                    <option value="" disabled selected>Select a Hop</option>
-                    {% for hop in hops %}
-                        <option value="{{ hop.userId }}">
-                            [{{ hop.userDepartment }}] {{ hop.userName }}
-                        </option>
-                    {% endfor %}
-                </select>
+                <label>Department Name</label>
+                <input type="text" name="departmentName" value="{{ departmentName_text }}" required>
             </div>
         </div>
 
@@ -124,7 +104,7 @@
 
             <div class="form-right">
                 <label>Dean Name</label>
-                <select id="deanName" name="deanName" required>
+                <select id="deanName" name="deanName">
                     <option value="" disabled selected>Select a Dean</option>
                     {% for dean in deans %}
                         <option value="{{ dean.userId }}">
@@ -134,7 +114,7 @@
                 </select><br>
 
                 <label>Hop Name</label>
-                <select id="hopName" name="hopName" required>
+                <select id="hopName" name="hopName">
                     <option value="" disabled selected>Select a Hop</option>
                     {% for hop in hops %}
                         <option value="{{ hop.userId }}">
