--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -59,12 +59,12 @@
         <div class="profile-frame">
             <div class="form-left">
                 <label>Department Code</label>
-                <input type="text" name="departmentCode" value="{{ departmentCode_text }}" required>
+                <input type="text" name="departmentCode" required>
             </div>
 
             <div class="form-right">
                 <label>Department Name</label>
-                <input type="text" name="departmentName" value="{{ departmentName_text }}" required>
+                <input type="text" name="departmentName" required>
             </div>
         </div>
 
@@ -72,12 +72,12 @@
         <br><br>
 
         <div class="button-wrapper">
-            <button type="submit">Add New Department</button>
+            <button type="submit">Add / Update Department</button>
         </div>
     </div>
 </form>
-
 {% endblock %}
+
 
 {% block edit_section %}
 <!-- Edit Form -->
