--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -78,6 +78,7 @@
                 </select>
             </div>
         </div>
+        <input type="hidden" name="form_type" value="manual">
         <br><br>
 
         <!-- Upload Form Submit -->
@@ -128,20 +129,22 @@
                 </select>
             </div>
         </div>
+
+        <input type="hidden" name="form_type" value="edit">
         <br><br>
 
         <div class="button-wrapper" style="gap: 5%;">
             <button type="submit" name="action" value="update" style="background-color: rgb(44, 238, 70);">
                 <i class="fas fa-check"></i> Update Venue
             </button>
-            <button type="submit" name="action" value="delete" style="background-color: rgb(235, 120, 120);"
+            <button type="submit" name="action" value="delete" style="background-color: rgb(235, 120, 120);" 
                     onclick="return confirm('Are you sure to delete this venue?')">
                 <i class="fas fa-trash"></i> Delete Venue
             </button>
         </div>
     </div>
 </form>
-
+=
 {% endblock %}
 
 
