--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -105,7 +105,7 @@
                     {% endfor %}
                 </select><br>
 
-                <label>Venue Floor</label>
+                <label>Venue Floor (Editable)</label>
                 <select name="venueFloor" id="editVenueFloor" required>
                     <option value="" disabled selected>Venue Floor</option>
                     <option value="FLOOR 2">FLOOR 2</option>
@@ -117,10 +117,10 @@
             </div>
 
             <div class="form-right">
-                <label>Venue Capacity</label>
+                <label>Venue Capacity (Editable)</label>
                 <input type="number" name="venueCapacity" id="editVenueCapacity" min="1" step="1" required><br>
 
-                <label>Venue Status</label>
+                <label>Venue Status (Editable)</label>
                 <select name="venueStatus" id="editVenueStatus" required>
                     <option value="" disabled selected>Venue Current Status</option>
                     <option value="AVAILABLE">AVAILABLE</option>
