--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -151,11 +151,74 @@
 {% endblock %}
 
 {% block edit_section %}
-<!-- Edit Form -->
 <form id="editForm" action="{{ url_for('admin_manageExam') }}" method="POST">
-    <div id="editSection" style="width: 90%; margin:auto;">
+    <div id="editSection" class="function-frame" style="width:100%">
+        <h4 style="text-align: center;">Edit Existing Exam</h4>
+        <div class="profile-frame">
+            
+            <div class="form-left" style="margin: auto;">
+                <label>Course/Section</label>
+                <select name="courseSection" id="editCourseSection" required>
+                    <option value="" disabled selected>Select Course Section</option>
+                    {% for course in course_data %}
+                        <option value="{{ course.courseCodeSection }}">
+                            [{{ course.courseCodeSection }}] - {{ course.courseName }}
+                        </option>   
+                    {% endfor %}
+                </select><br>
+
+                <label>Course Name</label>
+                <input type="text" id="editCourseName" name="courseName" readonly><br>
+
+                <label>Program Code</label>
+                <input type="text" id="editProgramCode" name="programCode" readonly><br>
+            </div>
+
+            <div class="form-middle" style="margin: auto;">
+                <label>Practical Lecturer</label>
+                <input type="text" id="editPracticalLecturer" name="practicalLecturer" readonly><br>
+
+                <label>Tutorial Lecturer</label>
+                <input type="text" id="editTutorialLecturer" name="tutorialLecturer" readonly><br>
+
+                <label>Number of Students</label>
+                <input type="number" id="editStudent" name="student" readonly>
+            </div> 
+
+            <div class="form-right" style="margin: auto;">
+                <!-- Editable fields -->
+                <label>Exam Start Date & Time</label>
+                <input type="datetime-local" id="editExamStartTime" name="startDateTime" required><br>
+
+                <label>Exam End Date & Time</label>
+                <input type="datetime-local" id="editExamEndTime" name="endDateTime" required><br>
+
+                <label>Venue</label>
+                <select name="venue" id="editVenue" required>
+                    <option value="" disabled selected>Select Venue</option>
+                    {% for venue in venue_data %}
+                        <option value="{{ venue.venueNumber }}">
+                            [Capacity: {{ venue.venueCapacity }}] - {{ venue.venueNumber }}
+                        </option>
+                    {% endfor %}
+                </select><br>
+
+                <label>Number of Invigilators</label>
+                <input type="number" id="editInvigilatorNo" name="invigilatorNo" min="1" step="1" required>    
+            </div>
+        </div>
+
         <input type="hidden" name="form_type" value="edit">
-        <div class="form-left" style="width: 100%">
+        <br><br>
+
+        <div class="button-wrapper" style="gap: 5%;">
+            <button type="submit" name="action" value="update" style="background-color: rgb(44, 238, 70);">
+                <i class="fas fa-check"></i> Update Exam
+            </button>
+            <button type="submit" name="action" value="delete" style="background-color: rgb(235, 120, 120);"
+                    onclick="return confirm('Are you sure to delete this exam?')">
+                <i class="fas fa-trash"></i> Delete Exam
+            </button>
         </div>
     </div>
 </form>
